[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ev-load-balancer"
version = "0.1.0"
description = "EV Load Balancer — dynamisk lastbalansering för Home Assistant"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-homeassistant-custom-component>=0.13",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
